--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Current Time and Hello, World!</title>
+  <title>Current Time, Location, and Hello, World!</title>
 </head>
 <body>
   <h1>Current Time</h1>
   <p id="current-time"></p>
+
+  <h1>Location</h1>
+  <p id="coordinates"></p>
+  <p id="location"></p>
 
   <h1>Hello, World!</h1>
   <p>Welcome to my web page.</p>
@@ -15,6 +19,46 @@
     var currentTimeElement = document.getElementById("current-time");
     var currentTime = new Date().toLocaleTimeString();
     currentTimeElement.textContent = currentTime;
+
+    // Get the user's location and display it
+    var coordinatesElement = document.getElementById("coordinates");
+    var locationElement = document.getElementById("location");
+
+    if (navigator.geolocation) {
+      navigator.geolocation.getCurrentPosition(success, error);
+    } else {
+      coordinatesElement.textContent = "Geolocation is not supported by this browser.";
+    }
+
+    function success(position) {
+      var latitude = position.coords.latitude;
+      var longitude = position.coords.longitude;
+      coordinatesElement.textContent = "GPS Coordinates: " + latitude + ", " + longitude;
+
+      // Fetch location information using reverse geocoding
+      fetch(
+        "https://nominatim.openstreetmap.org/reverse?format=jsonv2&lat=" +
+          latitude +
+          "&lon=" +
+          longitude
+      )
+        .then(function (response) {
+          return response.json();
+        })
+        .then(function (data) {
+          var address = data.display_name;
+          locationElement.textContent = "Location: " + address;
+        })
+        .catch(function (error) {
+          console.log("Error fetching location:", error);
+          locationElement.textContent = "Error fetching location.";
+        });
+    }
+
+    function error() {
+      coordinatesElement.textContent = "Unable to retrieve GPS coordinates.";
+      locationElement.textContent = "Unable to retrieve location.";
+    }
   </script>
 </body>
 </html>
