--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <h1>Current Time</h1>
-  <p id="current-time"></p>
+  <p id="current-time root dir"></p>
 
   <h1>Location</h1>
   <p id="coordinates"></p>
