--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <title>Current Time, Location, and Hello, World!</title>
 </head>
 <body>
-  <h1>Current Time</h1>
+  <h1>Current Time in src</h1>
   <p id="current-time"></p>
 
   <h1>Location</h1>
