--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Current Time, Location, and Hello, World!</title>
 </head>
 <body>
-  <h1>Current Time</h1>
+  <h1>Current Time root</h1>
   <p id="current-time root dir"></p>
 
   <h1>Location</h1>
