--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Webapp</title>
+    <title>Webapp new root</title>
     <script>
         function getLocation() {
             if (navigator.geolocation) {
