--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </script>
 </head>
 <body onload="getLocation()">
-    <h1>Webapp</h1>
+    <h1>Webapp in Index</h1>
     <p id="coordinates"></p>
     <p id="location"></p>
     <p id="localTime"></p>
