--- a/index.html
+++ b/index.html
@@ -1,64 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Current Time, Location, and Hello, World!</title>
+    <title>FoodScanGenius</title>
+    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script>
 </head>
 <body>
-  <h1>Current Time</h1>
-  <p id="current-time"></p>
-
-  <h1>Location</h1>
-  <p id="coordinates"></p>
-  <p id="location"></p>
-
-  <h1>Hello, World!</h1>
-  <p>Welcome to my web page.</p>
-
-  <script>
-    // Get the current time and display it
-    var currentTimeElement = document.getElementById("current-time");
-    var currentTime = new Date().toLocaleTimeString();
-    currentTimeElement.textContent = currentTime;
-
-    // Get the user's location and display it
-    var coordinatesElement = document.getElementById("coordinates");
-    var locationElement = document.getElementById("location");
-
-    if (navigator.geolocation) {
-      navigator.geolocation.getCurrentPosition(success, error);
-    } else {
-      coordinatesElement.textContent = "Geolocation is not supported by this browser.";
-    }
-
-    function success(position) {
-      var latitude = position.coords.latitude;
-      var longitude = position.coords.longitude;
-      coordinatesElement.textContent = "GPS Coordinates: " + latitude + ", " + longitude;
-
-      // Fetch location information using reverse geocoding
-      fetch(
-        "https://nominatim.openstreetmap.org/reverse?format=jsonv2&lat=" +
-          latitude +
-          "&lon=" +
-          longitude
-      )
-        .then(function (response) {
-          return response.json();
-        })
-        .then(function (data) {
-          var address = data.display_name;
-          locationElement.textContent = "Location: " + address;
-        })
-        .catch(function (error) {
-          console.log("Error fetching location:", error);
-          locationElement.textContent = "Error fetching location.";
-        });
-    }
-
-    function error() {
-      coordinatesElement.textContent = "Unable to retrieve GPS coordinates.";
-      locationElement.textContent = "Unable to retrieve location.";
-    }
-  </script>
+    <h1>FoodScanGenius</h1>
+    <p>Scan your product to find if it's suitable for you</p>
+    <div id="map"></div>
+    <script>
+        function initMap() {
+            navigator.geolocation.getCurrentPosition(function(position) {
+                var latLng = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
+                var map = new google.maps.Map(document.getElementById('map'), {
+                    center: latLng,
+                    zoom: 8
+                });
+                var marker = new google.maps.Marker({
+                    position: latLng,
+                    map: map,
+                    title: 'Your Location'
+                });
+            });
+        }
+        initMap();
+    </script>
 </body>
 </html>
