--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>FoodScanGenius</title>
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCnMwDCq_AeOujYGZzslG4CCnGBpj6OkMw"></script>
 </head>
 <body>
     <h1>FoodScanGenius</h1>
