--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCnMwDCq_AeOujYGZzslG4CCnGBpj6OkMw"></script>
 </head>
 <body>
-    <h1>FoodScanGenius</h1>
+    <h1>FoodScanGenius with GPS Key</h1>
     <p>Scan your product to find if it's suitable for you</p>
     <div id="map"></div>
     <button onclick="scanBarcode()">Click here to scan your barcode</button>
