--- a/index.html
+++ b/index.html
@@ -1,39 +1,93 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>FoodScanGenius</title>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCnMwDCq_AeOujYGZzslG4CCnGBpj6OkMw"></script>
+	<title>FoodScanGenius</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<style>
+		body {
+			font-family: Arial, Helvetica, sans-serif;
+			margin: 0;
+		}
+
+		.header {
+			background-color: #f1f1f1;
+			padding: 30px;
+			text-align: center;
+			font-size: 35px;
+		}
+
+		.content {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			padding: 20px;
+			font-size: 20px;
+		}
+
+		.map {
+			height: 400px;
+			width: 100%;
+			margin-bottom: 20px;
+		}
+
+		input[type=text] {
+			padding: 12px 20px;
+			margin: 8px 0;
+			box-sizing: border-box;
+			border-radius: 4px;
+			border: none;
+		}
+
+		button {
+			background-color: #4CAF50;
+			color: white;
+			padding: 14px 20px;
+			margin: 8px 0;
+			border-radius: 4px;
+			border: none;
+			cursor: pointer;
+		}
+
+		button:hover {
+			background-color: #45a049;
+		}
+		
+	</style>
 </head>
 <body>
-    <h1>FoodScanGenius with GPS Key</h1>
-    <p>Scan your product to find if it's suitable for you</p>
-    <div id="map"></div>
-    <button onclick="scanBarcode()">Click here to scan your barcode</button>
-    <script src="https://cdn.jsdelivr.net/npm/@zxing/library@0.18.4/esm/index.js"></script>
-    <script>
-        function initMap() {
-            navigator.geolocation.getCurrentPosition(function(position) {
-                var latLng = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
-                var map = new google.maps.Map(document.getElementById('map'), {
-                    center: latLng,
-                    zoom: 8
-                });
-                var marker = new google.maps.Marker({
-                    position: latLng,
-                    map: map,
-                    title: 'Your Location'
-                });
-            });
-        }
-        function scanBarcode() {
-            const codeReader = new ZXing.BrowserMultiFormatReader()
-            codeReader.decodeFromInputVideoDevice(undefined, 'video').then((result) => {
-                console.log(result.text)
-            }).catch((err) => {
-                console.error(err)
-            })
-        }
-        initMap();
-    </script>
+
+<div class="header">
+  <h1>FoodScanGenius</h1>
+</div>
+
+<div class="content">
+  <p>Scan your product to find if it's suitable for you.</p>
+  
+  <div id="map" class="map"></div>
+
+  <input type="text" placeholder="Barcode Scanner" id="barcode-scanner">
+
+  <button onclick="scanBarcode()">Scan</button>
+
+</div>
+
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCnMwDCq_AeOujYGZzslG4CCnGBpj6OkMw&callback=myMap"></script>
+
+<script>
+	function myMap() {
+	  var mapProp= {
+	    center:new google.maps.LatLng(51.508742,-0.120850),
+	    zoom:5,
+	  };
+	  var map = new google.maps.Map(document.getElementById("map"),mapProp);
+	  }
+
+	function scanBarcode() {
+	  var barcode = document.getElementById("barcode-scanner").value;
+
+	  alert(barcode);
+	  }
+</script>
+
 </body>
 </html>
