--- a/index.html
+++ b/index.html
@@ -5,20 +5,53 @@
 </head>
 <body>
   <h1>FoodScanGenius</h1>
-  <p>Welcome, enter a Barcode number to analyze:</p>
-  <input type="text" id="barcodeInput">
+  <p>Welcome! Select a barcode from the list to analyze:</p>
+  <select id="barcodeSelect">
+    <option value="">Select Barcode</option>
+    <option value="021000010875">021000010875</option>
+    <option value="021000010882">021000010882</option>
+    <option value="021000028207">021000028207</option>
+    <option value="021000658831">021000658831</option>
+    <option value="021000658862">021000658862</option>
+    <option value="012546008679">012546008679</option>
+    <option value="012546008693">012546008693</option>
+    <option value="019320068331">019320068331</option>
+    <option value="044000029555">044000029555</option>
+    <option value="019320013744">019320013744</option>
+    <option value="028400154437">028400154437</option>
+    <option value="028400443555">028400443555</option>
+    <option value="028400000222">028400000222</option>
+    <option value="028400249645">028400249645</option>
+    <option value="028400000789">028400000789</option>
+    <option value="012000018794">012000018794</option>
+    <option value="012000809958">012000809958</option>
+    <option value="012000381232">012000381232</option>
+    <option value="012000620362">012000620362</option>
+    <option value="012000100482">012000100482</option>
+    <option value="034000011605">034000011605</option>
+    <option value="034000040476">034000040476</option>
+    <option value="036632014009">036632014009</option>
+    <option value="068274934711">068274934711</option>
+    <option value="050000111879">050000111879</option>
+  </select>
   <button onclick="getBarcode()">Analyze</button>
   <p id="result"></p>
   <p id="dateTimeLocation"></p>
 
   <script>
     function getBarcode() {
-      var barcode = document.getElementById("barcodeInput").value;
+      var barcodeSelect = document.getElementById("barcodeSelect");
+      var selectedBarcode = barcodeSelect.value;
       var dateTime = new Date().toLocaleString(); // Get current date and time
       var location = "Your Location"; // Replace with the actual location information
 
-      document.getElementById("result").textContent = "Barcode: " + barcode;
-      document.getElementById("dateTimeLocation").textContent = "Date & Time: " + dateTime + " | Location: " + location;
+      if (selectedBarcode) {
+        document.getElementById("result").textContent = "Barcode: " + selectedBarcode;
+        document.getElementById("dateTimeLocation").textContent = "Date & Time: " + dateTime + " | Location: " + location;
+      } else {
+        document.getElementById("result").textContent = "Please select a valid barcode.";
+        document.getElementById("dateTimeLocation").textContent = "";
+      }
     }
   </script>
 </body>
