--- a/index.html
+++ b/index.html
@@ -2,6 +2,70 @@
 <html>
 <head>
   <title>FoodScanGenius</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f7f7f7;
+      margin: 0;
+      padding: 20px;
+    }
+
+    h1 {
+      color: #333;
+      text-align: center;
+    }
+
+    p {
+      color: #555;
+      margin-bottom: 10px;
+    }
+
+    select {
+      padding: 8px;
+      font-size: 16px;
+      border-radius: 4px;
+    }
+
+    button {
+      padding: 10px 20px;
+      font-size: 16px;
+      background-color: #4CAF50;
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #45a049;
+    }
+
+    #result {
+      margin-top: 20px;
+      padding: 10px;
+      background-color: #fff;
+      border-radius: 4px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    .error {
+      color: #ff0000;
+    }
+
+    .product-name {
+      font-weight: bold;
+      margin-top: 0;
+    }
+
+    .nutrition-facts {
+      list-style-type: none;
+      padding-left: 20px;
+    }
+
+    .nutrition-facts li {
+      margin-bottom: 5px;
+    }
+  </style>
 </head>
 <body>
   <h1>FoodScanGenius</h1>
@@ -77,13 +141,13 @@
         var ingredients = product.ingredients_text;
         var nutritionFacts = product.nutriments;
 
-        var resultHTML = "<h2>Product: " + productName + "</h2>";
+        var resultHTML = "<h2 class='product-name'>Product: " + productName + "</h2>";
         resultHTML += "<p>Ingredients: " + ingredients + "</p>";
         resultHTML += "<h3>Nutrition Facts:</h3>";
-        resultHTML += "<ul>";
+        resultHTML += "<ul class='nutrition-facts'>";
         for (var property in nutritionFacts) {
           if (nutritionFacts.hasOwnProperty(property)) {
-            resultHTML += "<li>" + property + ": " + nutritionFacts[property] + "</li>";
+            resultHTML += "<li><strong>" + property + ":</strong> " + nutritionFacts[property] + "</li>";
           }
         }
         resultHTML += "</ul>";
@@ -96,7 +160,7 @@
 
     function displayError() {
       var resultContainer = document.getElementById("result");
-      resultContainer.innerHTML = "<p>Error: Unable to retrieve barcode information.</p>";
+      resultContainer.innerHTML = "<p class='error'>Error: Unable to retrieve barcode information.</p>";
     }
   </script>
 </body>
