--- a/index.html
+++ b/index.html
@@ -3,68 +3,7 @@
 <head>
   <title>FoodScanGenius</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f7f7f7;
-      margin: 0;
-      padding: 20px;
-    }
-
-    h1 {
-      color: #333;
-      text-align: center;
-    }
-
-    p {
-      color: #555;
-      margin-bottom: 10px;
-    }
-
-    select {
-      padding: 8px;
-      font-size: 16px;
-      border-radius: 4px;
-    }
-
-    button {
-      padding: 10px 20px;
-      font-size: 16px;
-      background-color: #4CAF50;
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background-color: #45a049;
-    }
-
-    #result {
-      margin-top: 20px;
-      padding: 10px;
-      background-color: #fff;
-      border-radius: 4px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    }
-
-    .error {
-      color: #ff0000;
-    }
-
-    .product-name {
-      font-weight: bold;
-      margin-top: 0;
-    }
-
-    .nutrition-facts {
-      list-style-type: none;
-      padding-left: 20px;
-    }
-
-    .nutrition-facts li {
-      margin-bottom: 5px;
-    }
+    /* Your CSS styles here */
   </style>
 </head>
 <body>
@@ -107,30 +46,38 @@
       var selectedBarcode = barcodeSelect.value;
 
       if (selectedBarcode) {
-        var apiURL = "https://world.openfoodfacts.org/api/v0/product/" + selectedBarcode + ".json";
-
-        // Make AJAX request
-        var xhr = new XMLHttpRequest();
-        xhr.open("GET", apiURL, true);
-        xhr.onreadystatechange = function() {
-          if (xhr.readyState === 4 && xhr.status === 200) {
-            var response = JSON.parse(xhr.responseText);
-
+        // Fetch data from Open Food Facts API
+        var openFoodFactsURL = "https://world.openfoodfacts.org/api/v0/product/" + selectedBarcode + ".json";
+        fetch(openFoodFactsURL)
+          .then(response => response.json())
+          .then(data => {
             // Process the response and display the results
-            displayResults(response);
-          } else {
+            displayOpenFoodFactsResults(data);
+          })
+          .catch(error => {
             // Display error message if the request fails
             displayError();
-          }
-        };
-        xhr.send();
+          });
+
+        // Fetch data from UPCitemdb API
+        var upcItemdbURL = "https://api.upcitemdb.com/prod/trial/lookup?upc=" + selectedBarcode;
+        fetch(upcItemdbURL)
+          .then(response => response.json())
+          .then(data => {
+            // Process the response and display the results
+            displayUPCitemdbResults(data);
+          })
+          .catch(error => {
+            // Display error message if the request fails
+            displayError();
+          });
       } else {
         // Display error message if no barcode is selected
         displayError();
       }
     }
 
-    function displayResults(response) {
+    function displayOpenFoodFactsResults(response) {
       var resultContainer = document.getElementById("result");
       resultContainer.innerHTML = ""; // Clear previous results
 
@@ -141,10 +88,10 @@
         var ingredients = product.ingredients_text;
         var nutritionFacts = product.nutriments;
 
-        var resultHTML = "<h2 class='product-name'>Product: " + productName + "</h2>";
+        var resultHTML = "<h2>Product: " + productName + "</h2>";
         resultHTML += "<p>Ingredients: " + ingredients + "</p>";
         resultHTML += "<h3>Nutrition Facts:</h3>";
-        resultHTML += "<ul class='nutrition-facts'>";
+        resultHTML += "<ul>";
         for (var property in nutritionFacts) {
           if (nutritionFacts.hasOwnProperty(property)) {
             resultHTML += "<li><strong>" + property + ":</strong> " + nutritionFacts[property] + "</li>";
@@ -152,15 +99,37 @@
         }
         resultHTML += "</ul>";
 
-        resultContainer.innerHTML = resultHTML;
+        resultContainer.innerHTML += resultHTML;
       } else {
-        displayError();
+        // Display error message if Open Food Facts data is not available
+        resultContainer.innerHTML += "<p class='error'>Error: Unable to retrieve barcode information from Open Food Facts.</p>";
+      }
+    }
+
+    function displayUPCitemdbResults(response) {
+      var resultContainer = document.getElementById("result");
+
+      if (response.code === "OK" && response.items.length > 0) {
+        var product = response.items[0];
+
+        var productName = product.title;
+        var brand = product.brand;
+        var manufacturer = product.manufacturer;
+
+        var resultHTML = "<h2>Product: " + productName + "</h2>";
+        resultHTML += "<p>Brand: " + brand + "</p>";
+        resultHTML += "<p>Manufacturer: " + manufacturer + "</p>";
+
+        resultContainer.innerHTML += resultHTML;
+      } else {
+        // Display error message if UPCitemdb data is not available
+        resultContainer.innerHTML += "<p class='error'>Error: Unable to retrieve barcode information from UPCitemdb.</p>";
       }
     }
 
     function displayError() {
       var resultContainer = document.getElementById("result");
-      resultContainer.innerHTML = "<p class='error'>Error: Unable to retrieve barcode information.</p>";
+      resultContainer.innerHTML += "<p class='error'>Error: Unable to retrieve barcode information.</p>";
     }
   </script>
 </body>
