--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
   <title>FoodScanGenius</title>
@@ -68,28 +69,97 @@
 </head>
 <body>
   <h1>FoodScanGenius</h1>
-@@ -77,13 +141,13 @@ <h1>FoodScanGenius</h1>
+  <p>Welcome! Select a barcode from the list to analyze:</p>
+  <select id="barcodeSelect">
+    <option value="">Select Barcode</option>
+    <option value="021000010875">021000010875</option>
+    <option value="021000010882">021000010882</option>
+    <option value="021000028207">021000028207</option>
+    <option value="021000658831">021000658831</option>
+    <option value="021000658862">021000658862</option>
+    <option value="012546008679">012546008679</option>
+    <option value="012546008693">012546008693</option>
+    <option value="019320068331">019320068331</option>
+    <option value="044000029555">044000029555</option>
+    <option value="019320013744">019320013744</option>
+    <option value="028400154437">028400154437</option>
+    <option value="028400443555">028400443555</option>
+    <option value="028400000222">028400000222</option>
+    <option value="028400249645">028400249645</option>
+    <option value="028400000789">028400000789</option>
+    <option value="012000018794">012000018794</option>
+    <option value="012000809958">012000809958</option>
+    <option value="012000381232">012000381232</option>
+    <option value="012000620362">012000620362</option>
+    <option value="012000100482">012000100482</option>
+    <option value="034000011605">034000011605</option>
+    <option value="034000040476">034000040476</option>
+    <option value="036632014009">036632014009</option>
+    <option value="068274934711">068274934711</option>
+    <option value="050000111879">050000111879</option>
+  </select>
+  <button onclick="getBarcodeDetails()">Analyze</button>
+  <div id="result"></div>
+
+  <script>
+    function getBarcodeDetails() {
+      var barcodeSelect = document.getElementById("barcodeSelect");
+      var selectedBarcode = barcodeSelect.value;
+
+      if (selectedBarcode) {
+        var apiURL = "https://world.openfoodfacts.org/api/v0/product/" + selectedBarcode + ".json";
+
+        // Make AJAX request
+        var xhr = new XMLHttpRequest();
+        xhr.open("GET", apiURL, true);
+        xhr.onreadystatechange = function() {
+          if (xhr.readyState === 4 && xhr.status === 200) {
+            var response = JSON.parse(xhr.responseText);
+
+            // Process the response and display the results
+            displayResults(response);
+          } else {
+            // Display error message if the request fails
+            displayError();
+          }
+        };
+        xhr.send();
+      } else {
+        // Display error message if no barcode is selected
+        displayError();
+      }
+    }
+
+    function displayResults(response) {
+      var resultContainer = document.getElementById("result");
+      resultContainer.innerHTML = ""; // Clear previous results
+
+      if (response.status === 1) {
+        var product = response.product;
+
+        var productName = product.product_name;
         var ingredients = product.ingredients_text;
         var nutritionFacts = product.nutriments;
 
-        var resultHTML = "<h2>Product: " + productName + "</h2>";
         var resultHTML = "<h2 class='product-name'>Product: " + productName + "</h2>";
         resultHTML += "<p>Ingredients: " + ingredients + "</p>";
         resultHTML += "<h3>Nutrition Facts:</h3>";
-        resultHTML += "<ul>";
         resultHTML += "<ul class='nutrition-facts'>";
         for (var property in nutritionFacts) {
           if (nutritionFacts.hasOwnProperty(property)) {
-            resultHTML += "<li>" + property + ": " + nutritionFacts[property] + "</li>";
             resultHTML += "<li><strong>" + property + ":</strong> " + nutritionFacts[property] + "</li>";
           }
         }
         resultHTML += "</ul>";
-@@ -96,7 +160,7 @@ <h1>FoodScanGenius</h1>
+
+        resultContainer.innerHTML = resultHTML;
+      } else {
+        displayError();
+      }
+    }
 
     function displayError() {
       var resultContainer = document.getElementById("result");
-      resultContainer.innerHTML = "<p>Error: Unable to retrieve barcode information.</p>";
       resultContainer.innerHTML = "<p class='error'>Error: Unable to retrieve barcode information.</p>";
     }
   </script>
