--- a/index.html
+++ b/index.html
@@ -3,68 +3,7 @@
 <head>
   <title>FoodScanGenius</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f7f7f7;
-      margin: 0;
-      padding: 20px;
-    }
-
-    h1 {
-      color: #333;
-      text-align: center;
-    }
-
-    p {
-      color: #555;
-      margin-bottom: 10px;
-    }
-
-    select {
-      padding: 8px;
-      font-size: 16px;
-      border-radius: 4px;
-    }
-
-    button {
-      padding: 10px 20px;
-      font-size: 16px;
-      background-color: #4CAF50;
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background-color: #45a049;
-    }
-
-    #result {
-      margin-top: 20px;
-      padding: 10px;
-      background-color: #fff;
-      border-radius: 4px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    }
-
-    .error {
-      color: #ff0000;
-    }
-
-    .product-name {
-      font-weight: bold;
-      margin-top: 0;
-    }
-
-    .nutrition-facts {
-      list-style-type: none;
-      padding-left: 20px;
-    }
-
-    .nutrition-facts li {
-      margin-bottom: 5px;
-    }
+    /* Your CSS styles here */
   </style>
 </head>
 <body>
@@ -107,30 +46,48 @@
       var selectedBarcode = barcodeSelect.value;
 
       if (selectedBarcode) {
-        var apiURL = "https://world.openfoodfacts.org/api/v0/product/" + selectedBarcode + ".json";
-
-        // Make AJAX request
-        var xhr = new XMLHttpRequest();
-        xhr.open("GET", apiURL, true);
-        xhr.onreadystatechange = function() {
-          if (xhr.readyState === 4 && xhr.status === 200) {
-            var response = JSON.parse(xhr.responseText);
-
+        // Fetch data from Open Food Facts API
+        var openFoodFactsURL = "https://world.openfoodfacts.org/api/v0/product/" + selectedBarcode + ".json";
+        fetch(openFoodFactsURL)
+          .then(response => response.json())
+          .then(data => {
             // Process the response and display the results
-            displayResults(response);
-          } else {
+            displayOpenFoodFactsResults(data);
+          })
+          .catch(error => {
             // Display error message if the request fails
             displayError();
-          }
-        };
-        xhr.send();
+          });
       } else {
         // Display error message if no barcode is selected
         displayError();
       }
+
+      // Get the current location and display the map and time
+      if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(function(position) {
+          var latitude = position.coords.latitude;
+          var longitude = position.coords.longitude;
+
+          // Display map using latitude and longitude
+          var mapURL = "https://maps.google.com/?q=" + latitude + "," + longitude;
+          var mapHTML = "<h3>Map Location</h3>";
+          mapHTML += "<iframe width='100%' height='300' frameborder='0' style='border:0' src='" + mapURL + "' allowfullscreen></iframe>";
+          document.getElementById("result").innerHTML = mapHTML;
+
+          // Display current time
+          var currentTime = new Date();
+          var timeHTML = "<h3>Current Time</h3>";
+          timeHTML += "<p>" + currentTime + "</p>";
+          document.getElementById("result").innerHTML += timeHTML;
+        });
+      } else {
+        // Geolocation is not supported by the browser
+        displayError();
+      }
     }
 
-    function displayResults(response) {
+    function displayOpenFoodFactsResults(response) {
       var resultContainer = document.getElementById("result");
       resultContainer.innerHTML = ""; // Clear previous results
 
@@ -141,10 +98,10 @@
         var ingredients = product.ingredients_text;
         var nutritionFacts = product.nutriments;
 
-        var resultHTML = "<h2 class='product-name'>Product: " + productName + "</h2>";
+        var resultHTML = "<h2>Product: " + productName + "</h2>";
         resultHTML += "<p>Ingredients: " + ingredients + "</p>";
         resultHTML += "<h3>Nutrition Facts:</h3>";
-        resultHTML += "<ul class='nutrition-facts'>";
+        resultHTML += "<ul>";
         for (var property in nutritionFacts) {
           if (nutritionFacts.hasOwnProperty(property)) {
             resultHTML += "<li><strong>" + property + ":</strong> " + nutritionFacts[property] + "</li>";
@@ -152,15 +109,17 @@
         }
         resultHTML += "</ul>";
 
-        resultContainer.innerHTML = resultHTML;
+        resultContainer.innerHTML += "<p>Thanks for checking out our tool from " + navigator.language + "!</p>";
+        resultContainer.innerHTML += resultHTML;
       } else {
-        displayError();
+        // Display error message if Open Food Facts data is not available
+        resultContainer.innerHTML += "<p class='error'>Error: Unable to retrieve barcode information from Open Food Facts.</p>";
       }
     }
 
     function displayError() {
       var resultContainer = document.getElementById("result");
-      resultContainer.innerHTML = "<p class='error'>Error: Unable to retrieve barcode information.</p>";
+      resultContainer.innerHTML += "<p class='error'>Error: Unable to retrieve barcode information.</p>";
     }
   </script>
 </body>
