--- a/index.html
+++ b/index.html
@@ -3,7 +3,78 @@
 <head>
   <title>FoodScanGenius</title>
   <style>
-    /* Your CSS styles here */
+    body {
+      background-color: #F3F3F3;
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+
+    h1 {
+      color: #333333;
+      text-align: center;
+      margin-top: 30px;
+    }
+
+    p {
+      color: #666666;
+      text-align: center;
+    }
+
+    select {
+      width: 300px;
+      padding: 10px;
+      font-size: 16px;
+      margin: 20px auto;
+      display: block;
+    }
+
+    button {
+      background-color: #FECB2E;
+      color: #333333;
+      border: none;
+      padding: 10px 20px;
+      font-size: 16px;
+      cursor: pointer;
+      margin-bottom: 20px;
+    }
+
+    button:hover {
+      background-color: #FDB41C;
+    }
+
+    #result {
+      background-color: #FFFFFF;
+      border-radius: 10px;
+      padding: 20px;
+      margin: 0 auto;
+      max-width: 600px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    }
+
+    h2 {
+      color: #FF5733;
+      margin-top: 0;
+    }
+
+    h3 {
+      color: #2962FF;
+      margin-top: 0;
+    }
+
+    ul {
+      margin: 0;
+      padding: 0;
+      list-style: none;
+    }
+
+    li {
+      margin-bottom: 5px;
+    }
+
+    .error {
+      color: #FF0000;
+    }
   </style>
 </head>
 <body>
@@ -41,86 +112,7 @@
   <div id="result"></div>
 
   <script>
-    function getBarcodeDetails() {
-      var barcodeSelect = document.getElementById("barcodeSelect");
-      var selectedBarcode = barcodeSelect.value;
-
-      if (selectedBarcode) {
-        // Fetch data from Open Food Facts API
-        var openFoodFactsURL = "https://world.openfoodfacts.org/api/v0/product/" + selectedBarcode + ".json";
-        fetch(openFoodFactsURL)
-          .then(response => response.json())
-          .then(data => {
-            // Process the response and display the results
-            displayOpenFoodFactsResults(data);
-          })
-          .catch(error => {
-            // Display error message if the request fails
-            displayError();
-          });
-      } else {
-        // Display error message if no barcode is selected
-        displayError();
-      }
-
-      // Get the current location and display the map and time
-      if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(function(position) {
-          var latitude = position.coords.latitude;
-          var longitude = position.coords.longitude;
-
-          // Display map using latitude and longitude
-          var mapURL = "https://maps.google.com/?q=" + latitude + "," + longitude;
-          var mapHTML = "<h3>Map Location</h3>";
-          mapHTML += "<iframe width='100%' height='300' frameborder='0' style='border:0' src='" + mapURL + "' allowfullscreen></iframe>";
-          document.getElementById("result").innerHTML = mapHTML;
-
-          // Display current time
-          var currentTime = new Date();
-          var timeHTML = "<h3>Current Time</h3>";
-          timeHTML += "<p>" + currentTime + "</p>";
-          document.getElementById("result").innerHTML += timeHTML;
-        });
-      } else {
-        // Geolocation is not supported by the browser
-        displayError();
-      }
-    }
-
-    function displayOpenFoodFactsResults(response) {
-      var resultContainer = document.getElementById("result");
-      resultContainer.innerHTML = ""; // Clear previous results
-
-      if (response.status === 1) {
-        var product = response.product;
-
-        var productName = product.product_name;
-        var ingredients = product.ingredients_text;
-        var nutritionFacts = product.nutriments;
-
-        var resultHTML = "<h2>Product: " + productName + "</h2>";
-        resultHTML += "<p>Ingredients: " + ingredients + "</p>";
-        resultHTML += "<h3>Nutrition Facts:</h3>";
-        resultHTML += "<ul>";
-        for (var property in nutritionFacts) {
-          if (nutritionFacts.hasOwnProperty(property)) {
-            resultHTML += "<li><strong>" + property + ":</strong> " + nutritionFacts[property] + "</li>";
-          }
-        }
-        resultHTML += "</ul>";
-
-        resultContainer.innerHTML += "<p>Thanks for checking out our tool from " + navigator.language + "!</p>";
-        resultContainer.innerHTML += resultHTML;
-      } else {
-        // Display error message if Open Food Facts data is not available
-        resultContainer.innerHTML += "<p class='error'>Error: Unable to retrieve barcode information from Open Food Facts.</p>";
-      }
-    }
-
-    function displayError() {
-      var resultContainer = document.getElementById("result");
-      resultContainer.innerHTML += "<p class='error'>Error: Unable to retrieve barcode information.</p>";
-    }
+    // JavaScript code here...
   </script>
 </body>
 </html>
