--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
   </style>
 </head>
 <body>
+  <center>
   <h1>FoodScanGenius</h1>
   <p>Welcome! Select a barcode from the list to analyze:</p>
   <select id="barcodeSelect">
@@ -118,6 +119,7 @@
     <option value="068274934711">068274934711</option>
     <option value="050000111879">050000111879</option>
   </select>
+  </center>
   <button onclick="getBarcodeDetails()">Analyze</button>
   <div id="location"></div>
   <div id="map"></div>
