--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       padding: 8px;
       font-size: 16px;
       border-radius: 4px;
+      text-align: center;
     }
 
     button {
@@ -40,6 +41,7 @@
 
     button:hover {
       background-color: #45a049;
+      text-align: center;
     }
 
     #result {
@@ -48,6 +50,7 @@
       background-color: #fff;
       border-radius: 4px;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      text-align: center;
     }
 
     .error {
