--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       background-color: #f7f7f7;
       margin: 0;
       padding: 20px;
+      text-align: center;
     }
 
     h1 {
@@ -50,7 +51,7 @@
       background-color: #fff;
       border-radius: 4px;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-      text-align: center;
+      text-align: justify;
     }
 
     .error {
@@ -124,8 +125,8 @@
     <option value="068274934711">068274934711</option>
     <option value="050000111879">050000111879</option>
   </select>
-  </center>
   <button onclick="getBarcodeDetails()">Analyze</button>
+  </center>
   <div id="location"></div>
   <div id="map"></div>
   <div id="result"></div>
